@@ -21,7 +21,11 @@ override_dh_install:
 	gzip -9n debian/tmp/usr/share/enlightenment/doc/*.txt
 	rm debian/tmp/usr/share/enlightenment/COPYING
 	rm debian/tmp/usr/share/enlightenment/AUTHORS
-	dh_install --list-missing
+	rm debian/tmp/usr/lib/systemd/user/enlightenment.service
+	dh_install
+
+override_dh_missing:
+	dh_missing --fail-missing
 
 override_dh_fixperms-arch:
 	dh_fixperms
