@@ -5,6 +5,7 @@ e17 (0.22.0-2) UNRELEASED; urgency=medium
   * d/rules:
     + simplify lintian-overrides path generation
     + switch from autotools+make -> meson+ninja for build
+    + switch to dh_missing
   * d/control:
     + Bump Standards-Version to 4.1.1
     + Set Rules-Requires-Root to disable building as root
